Applied patches from Si Chen (and Leon) to add support for currency formatting in form widget display type field, and the right-align style; cleaned up a few things from original patches, see Jira issue for details; Jira #OFBIZ-441
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6159 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -88,6 +88,13 @@ text-decoration: underline;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
+.tabletextright {
+font-size: 10px;
+text-decoration: none;
+font-family: Verdana, Arial, Helvettica, sans-serif;
+text-align: right;
+}
+
 .tablebuttontext {
 font-size: 10px;
 color: #1E3C66;
